@@ -1,2 +1,0 @@
-Atque is a tool for merging/splitting resources to Marathon scenarios
-compatible with Aleph One.
