@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2023,v 1.4023 2023/06/26 11:52:54 wiz Exp $
+$NetBSD: CHANGES-2023,v 1.4024 2023/06/26 11:53:55 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2023:
 
@@ -5590,3 +5590,4 @@ Changes to the packages collection and infrastructure in 2023:
 	Removed devel/ExmanIDE [wiz 2023-06-26]
 	Removed devel/boa-constructor [wiz 2023-06-26]
 	Removed editors/nts [wiz 2023-06-26]
+	Removed games/atque [wiz 2023-06-26]
